--- a/css/float.css
+++ b/css/float.css
@@ -172,3 +172,72 @@ footer i {
 footer i:hover {
 	transform: scale(1.3);
 }
+
+@media (max-width: 575px) {
+	.container {
+		height: unset;
+		overflow: unset;
+	}
+	.float .one {
+		width: 100%;
+	}
+	.float > div.one > div {
+		float: unset;
+		width: 100%;
+	}
+	.content {
+		width: 100%;
+		float: unset;
+	}
+}
+@media (min-width: 576px) and (max-width: 767px) {
+	.container {
+		height: unset;
+		overflow: unset;
+	}
+	.float .one {
+		width: 100%;
+	}
+	.float > div.one > div.pic {
+		float: left;
+		width: calc(100% / 2);
+	}
+	.float > div.one > div.information {
+		float: left;
+		width: calc(100% / 2);
+	}
+	div.set {
+		clear: both;
+	}
+	.float > div.one > div.skills {
+		float: left;
+		width: calc(100% / 2);
+	}
+	.float > div.one > div.languages {
+		float: left;
+		width: calc(100% / 2);
+	}
+	.content {
+		width: 100%;
+		float: unset;
+	}
+}
+@media (min-width: 768px) and (max-width: 991px) {
+	.container {
+		height: unset;
+		overflow: unset;
+	}
+	.float .one {
+		width: 100%;
+	}
+	.float > div.one > div {
+		float: left;
+		width: calc(100% / 4);
+	}
+	.content {
+		width: 100%;
+		float: unset;
+	}
+}
+@media (min-max: 992px) {
+}
